1 attempt in kz3.2

--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -8,17 +8,19 @@
     <title>HyperStudentDetail</title>
 
     <!-- Bootstrap -->
-    <link href="../static/css/bootstrap.css" rel="stylesheet">
-    <link href="../static/css/style.css" rel="stylesheet">
+    {% load static from staticfiles %}
+    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
   </head>
   <body>
     <ul class="nav nav-tabs">
-      <li role="presentation"><a href="index.html">Main</a></li>
-      <li role="presentation"><a href="contact.html">Contacts</a></li>
-      <li role="presentation"><a href="student_list.html">Students</a></li>
+      <li role="presentation"><a href="{% url 'index' %}">Main</a></li>
+      <li role="presentation"><a href="{% url 'contact' %}">Contacts</a></li>
+      <li role="presentation"><a href="{% url 'student_list' %}">Students</a></li>
     </ul>
     <h1>Faulkner William</h1>
-    <img src="../static/images/faulkner.jpg">
+    {% load static from staticfiles %}
+    <img src="{% static 'images/faulkner.jpg' %}">
     <div class="panel panel-info">
       <div class="panel-heading">
         <h3 class="panel-title">Surname</h3>
@@ -148,6 +150,7 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="../static/js/bootstrap.js"></script>
+    {% load static from staticfiles %}
+    <script src="{% static 'js/bootstrap.js' %}"></script>
   </body>
 </html>
