--- a/templates/contact.html
+++ b/templates/contact.html
@@ -8,16 +8,17 @@
     <title>HyperContact</title>
 
     <!-- Bootstrap -->
-    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../static/css/style.css" rel="stylesheet">
+    {% load static from staticfiles %}
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
 
     
   </head>
   <body>
     <ul class="nav nav-tabs">
-      <li role="presentation" class="active"><a href="contact.html">Contacts</a></li>
-      <li role="presentation"><a href="index.html">Main</a></li>
-      <li role="presentation"><a href="student_list.html">Students</a></li>
+      <li role="presentation" class="active"><a href="{% url 'contact' %}">Contacts</a></li>
+      <li role="presentation"><a href="{% url 'index' %}">Main</a></li>
+      <li role="presentation"><a href="{% url 'student_list' %}">Students</a></li>
     </ul>
     <h3 class="dir">Director</h3>
     <div class="bs-example" id="director">
@@ -113,6 +114,7 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="../static/js/bootstrap.js"></script>
+    {% load static from staticfiles %}
+    <script src="{% static 'js/bootstrap.js' %}"></script>
   </body>
 </html>
