--- a/templates/index.html
+++ b/templates/index.html
@@ -8,17 +8,18 @@
     <title>HyperMain</title>
 
     <!-- Bootstrap -->
-    <link href="../static/css/bootstrap.css" rel="stylesheet">
-    <link href="../static/css/style.css" rel="stylesheet">
+    {% load static from staticfiles %}
+    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
 
 
     
   </head>
   <body>
     <ul class="nav nav-tabs">
-      <li role="presentation" class="active"><a href="index.html">Main</a></li>
-      <li role="presentation"><a href="contact.html">Contacts</a></li>
-      <li role="presentation"><a href="student_list.html">Students</a></li>
+      <li role="presentation" class="active"><a href="{% url 'index' %}">Main</a></li>
+      <li role="presentation"><a href="{% url 'contact' %}">Contacts</a></li>
+      <li role="presentation"><a href="{% url 'student_list' %}">Students</a></li>
     </ul>
     <h1>PyBursa</h1>
     <h2>Description:</h2>
@@ -488,8 +489,9 @@
       </div>
   </div>         
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    {% load static from staticfiles %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="../static/js/bootstrap.js"></script>
+    <script src="{% static 'js/bootstrap.js' %}"></script>
   </body>
 </html>
