--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,9 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>PythonBursa</title>
     <!-- Bootstrap -->
-    <link href="../static/css/style.css" rel="stylesheet">
-    <link href="../static/css/bootstrap.css" rel="stylesheet">
+    {% load staticfiles %}
+    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -28,9 +29,9 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Main</a>
-      <a class="navbar-brand" href="contact.html">Contacts</a>
-      <a class="navbar-brand" href="student_list.html">Students</a>
+      <a class="navbar-brand" href="{% url 'index' %}">Main</a>
+      <a class="navbar-brand" href="{% url 'contact' %}">Contacts</a>
+      <a class="navbar-brand" href="{% url 'student_list' %}">Students</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -239,6 +240,6 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="../static/js/bootstrap.js"></script>
+    <script src="{% static'js/bootstrap.js' %"></script>
   </body>
 </html>
