--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -6,19 +7,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>PyBursa</title>
-    <link rel="stylesheet" href="../static/css/style.css">
-    <link rel="shortcut icon" href="../static/images/python.ico" type="image/x-icon">
-    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
     
+    
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+   
+    <link rel="shortcut icon" href="{% static 'images/python.ico' %}" type="image/x-icon">
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
   </head>
   <body>
   <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-         <li class="active"><a href="index.html">Main</a></li>
-         <li><a href="contact.html">Contacts</a></li>
-         <li><a href="student_list.html">Students</a></li>
+         <li class="active"><a href="{% url 'index' %}">Main</a></li>
+         
+         <li><a href="{% url 'contact' %}">Contacts</a></li>
+         <li><a href="{% url 'student_list' %}">Students</a></li>
          
          </li>
         </ul>
@@ -47,6 +51,6 @@
   <div class="alert alert-success" role="alert">P.S. не пожалеешь!</div>
    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="../static/js/bootstrap.min.js"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
   </body>
 </html>
