--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% load staticfiles %}
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <meta content="" name="description">
     <meta content="Orest Stetsiak" name="author">
-    <link href="../static/images/favicon.png" rel="icon">
     <title>PyBursa main page</title><!-- Bootstrap core CSS -->
-    <link href="../static/css/bootstrap.css" rel="stylesheet">
-    <link href="../static/css/style.css" rel="stylesheet">
-    <link href="../static/css/jumbotron.css" rel="stylesheet">
+    <link href="{% static 'images/favicon.png' %}" rel="icon">
+    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <link href="{% static 'css/jumbotron.css' %}" rel="stylesheet">
+
 </head>
 <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -20,9 +22,15 @@
                 "collapse" type="button"><span class="sr-only">Toggle
                 navigation</span> <span class="icon-bar"></span> <span class=
                 "icon-bar"></span> <span class="icon-bar"></span></button>
-                <a class="navbar-brand" href="index.html">Main</a>
-                <a class="navbar-brand" href="contact.html">Contacts</a>
-                <a class="navbar-brand" href="student_list.html">Students</a>
+
+                
+
+
+
+
+                <a class="navbar-brand" href="{% url 'index' %}">Main</a>
+                <a class="navbar-brand" href="{% url 'contact' %}">Contacts</a>
+                <a class="navbar-brand" href="{% url 'student_list' %}">Students</a>
             </div>
             <div class="navbar-collapse collapse" id="navbar">
                 <form class="navbar-form navbar-right">
@@ -388,7 +396,9 @@
     <script src=
     "https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
     </script> 
-    <script src="../static/js/bootstrap.js">
+    
+    <link href="{% static 'css/jumbotron.css' %}" rel="stylesheet">
+    <script src="{% static "js/bootstrap.js" %}">
     </script>
 </body>
 </html>
