--- a/templates/index.html
+++ b/templates/index.html
@@ -397,8 +397,6 @@
     "https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
     </script> 
     
-    <link href="{% static 'css/jumbotron.css' %}" rel="stylesheet">
-    <script src="{% static "js/bootstrap.js" %}">
-    </script>
+    <script src="{% static "js/bootstrap.js" %}"></script>
 </body>
 </html>
