--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -5,20 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Student Detail</title>
-    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../static/css/style.css" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
   </head>
   <body>
     <nav class="navbar navbar-default">
       <div class="navbar-header">
         <a class="navbar-brand" href='#'>
-          <img class="logo-minions" alt="Logo Pretty Minions" src="../static/images/logo.png" height="45px" style="margin-top: -10px"></a>
+          <img class="logo-minions" alt="Logo Pretty Minions" src="{% static 'images/logo.png' %}" height="45px" style="margin-top: -10px"></a>
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li><a href="index.html">Main</a></li>
-          <li><a href="contact.html">Contacts</a></li>
-          <li><a href="student_list.html">Students</a></li>    
+          <li><a href="{% url 'index' %}">Main</a></li>
+          <li><a href= "{% url 'contact' %}">Contacts</a></li>
+          <li><a href="{% url 'student_list' %}">Students</a></li>
         </ul>
       </div>
     </nav>
@@ -28,7 +28,7 @@
       <div class="col-sm-6 col-md-4">
         <h2>Силин Николай</h2>
         <div class="thumbnail">
-          <img src="../static/images/silin.jpg" alt="center" width="50%" height="50%">
+          <img src="{% static 'images/silin.jpg' %}" alt="center" width="50%" height="50%">
           <div class="caption">
             <p>silin.nickolay@gmail.com</p>
             <p>skype: KolaniMir</p> 
@@ -155,6 +155,6 @@
     
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="../static/js/bootstrap.min.js"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
   </body>  
 </html>
