--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -5,20 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Pybursa Students</title>
-    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../static/css/style.css" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
   </head>
   <body>
       <nav class="navbar navbar-default">
         <div class="navbar-header">
             <a class="navbar-brand" href='#'>
-            <img class="logo-minions" alt="Logo Pretty Minions" src="../static/images/logo.png" height="45px" style="margin-top: -10px"></a>
+            <img class="logo-minions" alt="Logo Pretty Minions" src="{% static 'images/logo.png' %}" height="45px" style="margin-top: -10px"></a>
           </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="index.html">Main</a></li>
-            <li><a href="contact.html">Contacts</a></li>
-            <li class="active"><a href="student_list.html">Students</a></li>
+            <li><a href="{% url 'index' %}">Main</a></li>
+            <li><a href= "{% url 'contact' %}">Contacts</a></li>
+            <li class="active"><a href="{% url 'student_list' %}">Students</a></li>
           </ul>
         </div>
       </nav>
@@ -44,7 +44,7 @@
           <th class='student_td text-primary'>Skype</th>
         </tr>
         <tr>
-          <td class='student_td'><a href="student_detail.html">1</a>
+          <td class='student_td'><a href="{% url 'student_detail'%}">1</a>
           </td>
           <td class='student_td'>Силин
           </td>
@@ -96,6 +96,6 @@
       </table>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="../static/js/bootstrap.min.js"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
   </body>  
 </html>
