--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,8 +9,8 @@
     <title>Student's card</title>
 
     <!-- Bootstrap -->
-   <link href="../static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../static/css/style.css" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -36,9 +37,9 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="index.html">Main</a></li>
-        <li><a href="contact.html">Contacts</a></li>
-        <li><a href="student_list.html">Students</a></li>
+        <li><a href="{% url 'index' %}">Main</a></li>
+        <li><a href="{% url 'contact' %}">Contacts</a></li>
+        <li><a href="% url 'student_list' %}">Students</a></li>
       
       </ul>
      
@@ -49,7 +50,7 @@
 	</nav>
 	<nav>
   	<ul class=" color pager">
-    <li><a href="student_list.html">Previous</a></li>
+    <li><a href="{% url 'student_list' %}">Previous</a></li>
   	
     </ul>
 </nav>
@@ -113,6 +114,6 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-   <script src="../static/js/bootstrap.min.js"></script>
+   <script src="{% static 'js/bootstrap.min.js' %}"></script>
   </body>
 </html>
