--- a/templates/contact.html
+++ b/templates/contact.html
@@ -38,7 +38,7 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li>
+                    <li class="active">
                         <a class="page-scroll" href="contact.html">Contacts</a>
                     </li>
                     <li>
