--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
       <h2 class="progy">Programm</h2>
       <ul>  
         <li class="line"> Основы синтаксиа языка Python</li>
-        <li class="line">Основы HTML, CSS, Bootstrap, Git</li>
+        <li class="line">Основы HTML, CSS, Bootstrap, Git, Js</li>
         <li class="line">Создание своего работающего проекта</li>
       </ul>
     </div>
