--- a/quadratic/templates/results.html
+++ b/quadratic/templates/results.html
@@ -29,7 +29,7 @@
         {% if dscrt > 0 %}
             <h3>Квадратное уравнение имеет два действительных корня: x1 = {{ x1 }}, x2 = {{ x2 }}</h3>
         {% elif dscrt == 0 %}
-            <h3>Дискриминант равен нулю, квадратное уравнение имеет один действительных корень: x1 = x2 = {{ x1 }}</h3>
+            <h3>Дискриминант равен нулю, квадратное уравнение имеет один действительный корень: x1 = x2 = {{ x1 }}</h3>
         {% elif dscrt < 0 %}
             <h3>Дискриминант меньше нуля, квадратное уравнение не имеет действительных решений.</h3>
         {% endif %}
