--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="">
     <title>Student detail</title>
-    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../static/css/style.css" rel="stylesheet">
+    {% load staticfiles %}
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/starter-template.css' %}" rel="stylesheet">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 <!-- NAVBAR
@@ -170,6 +172,6 @@
           </div>
         </div>
   </div>
-
+  <script src="{% static 'js/bootstrap.min.js' %}"></script>
   </body>
 </html>
