--- a/templates/contact.html
+++ b/templates/contact.html
@@ -25,9 +25,9 @@
           <div class="container">
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li><a href="index.html">Main</a></li>
-                <li class="active"><a href="contact.html">Contacts</a></li>
-                <li><a href="student_list.html">Students</a></li>
+                <li><a href="{% url 'index' %}">Main</a></li>
+                <li class="active"><a href="{% url 'contact' %}">Contacts</a></li>
+                <li><a href="{% url 'student_list' %}">Students</a><li>
                   </ul>
                 </li>
               </ul>
