--- a/templates/index.html
+++ b/templates/index.html
@@ -27,9 +27,9 @@
           <div class="container">
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="index.html">Main</a></li>
-                <li><a href="contact.html">Contacts</a></li>
-                <li><a href="student_list.html">Students</a></li>
+                <li class="active"><a href="{% url 'index' %}">Main</a></li>
+                <li><a href="{% url 'contact' %}">Contacts</a></li>
+                <li><a href="{% url 'student_list' %}">Students</a></li>
               </ul>
             </div>
           </div>
