--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -22,9 +22,9 @@
           <div class="container">
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li><a href="index.html">Main</a></li>
-                <li><a href="contact.html">Contacts</a></li>
-                <li class="active"><a href="student_list.html">Students</a></li>
+                <li><a href="{% url 'index' %}">Main</a><li>
+                <li><a href="{% url 'contact' %}">Contacts</a><li>
+                <li class="active"><a href="{% url 'student_list' %}">Students</a><li>
                   </ul>
                 </li>
               </ul>
@@ -49,7 +49,7 @@
     </thead>
     <tbody>
       <tr>
-        <td><a href="student_detail.html">1</a></td>
+        <td><a href="{% url 'student_detail' %}">1</a></td>
         <td>Terentiev</td>
         <td>Denys</td>
         <td>Kharkov</td>
