--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,19 +8,19 @@
 <meta name="description" content="Выучить питон на PyBursa быстро и легко!">
 <meta name="keywords" content="питон, курсы, онлайн">
 <meta name="author" content="Олександр Кучеренко">
-<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+<link rel="shortcut icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}">
 <!-- Основной файл стилей -->
-<link href="../static/css/style.css" rel="stylesheet">
+<link href="{% static 'css/style.css'%}" rel="stylesheet">
 <!-- responsive stylesheet -->
-<link href="../static/css/responsive.css" rel="stylesheet">
+<link href="{% static 'css/responsive.css'%}" rel="stylesheet">
 <!-- Подключение иконок Font Awesome -->
-<link rel="stylesheet" href="../static/css/font-awesome.min.css">
+<link rel="stylesheet" href="{% static 'css/font-awesome.min.css'%}">
 <!-- Подключение Bootstrap -->
-<link rel="stylesheet" href="../static/css/bootstrap.min.css">
-<link rel="stylesheet" href="../static/css/bootstrap-theme.css">
-<script src="../static/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="{% static 'css/bootstrap.min.css'%}">
+<link rel="stylesheet" href="{% static 'css/bootstrap-theme.css'%}">
+<script src="{% static 'js/bootstrap.min.js'%}"></script>
 <!-- Дополнительный файл стилей -->
-<link href="../static/css/other.css" rel="stylesheet">
+<link href="{% static 'css/other.css'%}" rel="stylesheet">
 </head>
 <body>
 <div id="wrapper">
@@ -55,10 +56,10 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <nav>
             <ul class="nav navbar-nav">
-              <li> <a href="index.html">Main </a> </li>
-              <li> <a href="student_list.html" class="active">Students </a> </li>
-              <li> <a href="contact.html">Contacts</a> </li>
-              <li> <a style="visibility: visible;" class="search-button" href="#"><i class="icon icon-Search">.</i></a> </li>
+              <li> <a href="{% url 'index' %}">Main </a> </li>
+              <li> <a href="{% url 'student_list' %}" class="active">Students </a> </li>
+              <li> <a href="{% url 'contact' %}">Contacts</a> </li>
+              <li> <a style="visibility: visible;" class="search-button" href="{% url 'index' %}"><i class="icon icon-Search">.</i></a> </li>
             </ul>
             <div style="" class="bg-white hide-show-content no-display header-search-content">
               <form class="navbar-form vertically-absolute-middle">
@@ -76,7 +77,7 @@
   <!--Конец секции Header -->
 
   <!-- Site Content -->
-  <div id="main">
+  <center id="main">
   <!--Начало секции "хлебных крошек"-->
     <div class="breadcrumb-section">
       <div class="container">
@@ -87,7 +88,7 @@
           </div>
           <div class="col-xs-12 col-sm-4 col-md-4 pull-right text-right">
             <ul class="breadcrumb">
-              <li> <i class="fa fa-home">.</i> <a href="index.html">Main</a> </li>
+              <li> <i class="fa fa-home">.</i> <a href="{% url 'index' %}">Main</a> </li>
               <li class="active"> Students </li>
             </ul>
           </div>
@@ -108,7 +109,7 @@
         </thead>
         <tbody>
             <tr>
-                <td><a href="student_detail.html">1</a></td>
+                <td><a href="{% url 'student_detail' %}">1</a></td>
                 <td>Statham</td>
                 <td>Jason</td>
                 <td>Ukraine, Kharkov, st. Frankovskaya, 14, kv. 77</td>
@@ -239,9 +240,9 @@
   <!-- End footer
 			================================================== -->
 </div>
-<script src="static/js/jquery.min.js"></script>
+<script src="{% static 'js/jquery.min.js' %}"></script>
 
-<script type="text/javascript" src="static/js/owl.carousel.js"></script>
-<script type="text/javascript" src="static/js/owl.carousel.min.js"></script>
+<script type="text/javascript" src="{% static 'js/owl.carousel.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/owl.carousel.min.js' %}"></script>
 </body>
 </html>
