--- a/templates/index.html
+++ b/templates/index.html
@@ -29,6 +29,7 @@
             <li class="active"><a href="{% url 'index' %}">Main</a><li>
             <li><a href="{% url 'contact' %}">Contacts</a><li>
             <li><a href="{% url 'student_list' %}">Students</a><li>
+            <li><a href="{% url 'results' %}">Results</a><li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
