--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>PyBursa contacts</title>
+    <title>Results</title>
     {% load staticfiles %}
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/starter-template.css' %}" rel="stylesheet">
@@ -27,52 +27,41 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="{% url 'index' %}">Main</a><li>
-            <li class="active"><a href="{% url 'contact' %}">Contacts</a><li>
+            <li><a href="{% url 'contact' %}">Contacts</a><li>
             <li><a href="{% url 'student_list' %}">Students</a><li>
-            <li><a href="{% url 'results' %}">Results</a><li>
+            <li class="active"><a href="{% url 'results' %}">Results</a><li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
 
     <div class="container">
+         <h2>Equation</h2>
+         <h3>a*x*x + b*x + c = 0</h3>
+         <ul>
+          {% if a_err %}
+              <li class="list"><p>a = {{ a }} <br>{{ a_err }}</br></p></li>
+          {% else %}
+              <li class="list"><p>a = {{ a }}</p></li>
+          {% endif %}
 
-      <div class="starter-template">
-        <div class="container">
-          <h1>PyBursa courses</h1>>
-          <h2>Contacts</h2>
-            <div class="pre-scrollable">
-              <div class="thumbnail">
-                <h4 >Director</h4>
-              </div>
-                <ul class="director">
-                  <li class="list">Name: Ivan T</li>
-                  <li class="list">Skype: ivan_t</li>
-                  <li class="list">Email: ivan_t@gmail.com</li>
-                  <li class="list">Phone: (063)0000000</li>
-                </ul>
-              <div class="thumbnail">
-                <h4>Manager</h4>
-              </div>
-                <ul class="manager">
-                  <li class="list">Name:  Kate R</li>
-                  <li class="list">Skype: kate_r</li>
-                  <li class="list">Email: kate_r@gmail.com</li>
-                  <li class="list">Phone: (066)6666666</li>
-                </ul>
-              <div class="thumbnail">
-                <h4>Founder</h4>
-              </div>
-              <ul class="founder">
-                <li class="list">Name:  Nik E</li>
-                <li class="list">Skype: nik_e</li>
-                <li class="list">Email: nik_e@gmail.com</li>
-                <li class="list">Phone: (099)9999999</li>
-              </ul>
-             </div>
-        </div>
-      </div>
-    </div><!-- /.container -->
+          {% if b_err %}
+              <li class="list"><p>b = {{ b }} <br>{{ b_err }}</br></p></li>
+          {% else %}
+              <li class="list"><p>b = {{ b }}</p></li>
+          {% endif %}
+
+          {% if c_err %}
+              <li class="list"><p>c = {{ c }} <br>{{ c_err }}</br></p></li>
+          {% else %}
+              <li class="list"><p>c = {{ c }}</p></li>
+          {% endif %}
+          </ul>
+          {% if d %}
+              <h3>Дискриминант: {{ d }}</h3>
+              <p>{{ d_mess }}</p>
+          {% endif %}
+     </div><!-- /.container -->
 
 
     <!-- Bootstrap core JavaScript
