--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -57,7 +57,7 @@
               <li class="list"><p>c = {{ c }}</p></li>
           {% endif %}
           </ul>
-          {% if d %}
+          {% if discr %}
               <h3>Дискриминант: {{ d }}</h3>
               <p>{{ d_mess }}</p>
           {% endif %}
