--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -32,8 +32,9 @@
         </nav>
       </div>
     </div>
-
-<h1>Terentiev Denys</h1>
+<div>
+  <h1 id="student_name">Terentiev Denys</h1>
+</div>>
 <div class="container">
   <h2>Курс PyBursa</h2>
   <p>Ниже представлен список студентов курса PyBursa</p>            
