--- a/templates/index.html
+++ b/templates/index.html
@@ -7,9 +7,10 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>PythonBursa</title>
     <!-- Bootstrap -->
-    <link href="../static/css/bootstrap.css" rel="stylesheet">
-+   <link href="../static/css/style.css" rel="stylesheet">
-    <script src="../static/js/bootstrap.js/"></script>
+    {% load staticfiles %}
+    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
++   <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <script src="{% static 'js/bootstrap.js'%}"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -29,9 +30,9 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html">Main</a>
-        <a class="navbar-brand" href="contact.html">Contacts</a>
-        <a class="navbar-brand" href="student_list.html">Students</a>
+        <a class="navbar-brand" href="{% url 'index' %}">Main</a>
+      <a class="navbar-brand" href="{% url 'contact' %}">Contacts</a>
+      <a class="navbar-brand" href="{% url 'student_list' %}">Students</a>
       </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
