--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -7,9 +7,10 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Course_info</title>
     <!-- Bootstrap -->
-    <link href="../static/css/bootstrap.css" rel="stylesheet">
-+   <link href="../static/css/style.css" rel="stylesheet">
-    <script src="../static/js/bootstrap.js/"></script>
+    {% load staticfiles %}
+    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
++   <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <script src="{% static 'js/bootstrap.js'%}"></script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -28,9 +29,9 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Main</a>
-      <a class="navbar-brand" href="contact.html">Contacts</a>
-      <a class="navbar-brand" href="student_list.html">Students</a>
+      <a class="navbar-brand" href="{% url 'index' %}">Main</a>
+      <a class="navbar-brand" href="{% url 'contact' %}">Contacts</a>
+      <a class="navbar-brand" href="{% url 'student_list' %}">Students</a>
     	</div>
     	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     	</div><!-- /.navbar-collapse -->
@@ -47,7 +48,7 @@
 
 				<table class="table table-hover">
   				<tr class="headtable_student"><td><h3>No</h3></td><td><h3>Name</h3></td><td><h3>Surname</h3></td><td><h3>Address</h3></		td><td><h3>Skype</h3></td><tr>
-  				<tr class="head_study_table"><td><a href="student_detail.html">1</a></td><td><h3>Kostyantin</h3></td><td><h3>Moroz</h3></td><td><h3>Ukraine, Kharkiv, Velika Kilceva str.</h3></td><td><h3>Kostyaf1777</h3></td></tr>
+  				<tr class="head_study_table"><td><a href="{% url 'student_detail' %}">1</a></td><td><h3>Kostyantin</h3></td><td><h3>Moroz</h3></td><td><h3>Ukraine, Kharkiv, Velika Kilceva str.</h3></td><td><h3>Kostyaf1777</h3></td></tr>
   				<tr class="row_table_student"><td><h3>2</h3></td><td><h3>Sergey</h3></td><td><h3>Pogorelov</h3></td><td><h3>Ukraine, Kharkiv, Velika 							Kilceva str.</h3></td><td><h3>SergPogorelov</h3></td></tr>
   				<tr class="head_study_table"><td><h3>3</h3></td><td><h3>Petro</h3></td><td><h3>Ivanov</h3></td><td><h3>Ukraine, Kharkiv, Velika 						Kilceva str.</h3></td><td><h3>PeterUa</h3></td></tr>
   				<tr class="row_table_student"><td><h3>4</h3></td><td><h3>Aleksandr</h3></td><td><h3>Petrov</h3></td><td><h3>Ukraine, Kharkiv, Velika 							Kilceva str.</h3></td><td><h3>AlexPetrov</h3></td></tr>
